--- a/hw-04-controllers-models/views/books/bookDetail.ejs
+++ b/hw-04-controllers-models/views/books/bookDetail.ejs
@@ -31,9 +31,9 @@
 			<h3><span class="small-text">Рік випуску книги:</span> <%= book.year %> р.</h3>
 			<a
 				href="/books"
-				class="btn"
-				>До списку книг</a
-			>
+				class="btn btn-primary">
+				Перейти до списку книг
+			</a>
 		</main>
 		<%-include('../components/footer.ejs') %>
 	</body>
