--- a/hw-05-form-processing/views/cars/carForm.ejs
+++ b/hw-05-form-processing/views/cars/carForm.ejs
@@ -11,6 +11,9 @@
 		<link
 			rel="stylesheet"
 			href="/stylesheets/carForm.css" />
+		<link
+			rel="stylesheet"
+			href="/stylesheets/footer.css" />
 		<meta charset="UTF-8" />
 		<meta
 			name="viewport"
