Refactored text in carForm

--- a/hw-05-form-processing/views/cars/carForm.ejs
+++ b/hw-05-form-processing/views/cars/carForm.ejs
@@ -61,7 +61,7 @@
 					</label>
 
 					<label>
-						<span>Номер авто книги</span>
+						<span>Номер авто</span>
 						<input
 							value="<%= car.plate %>"
 							type="text"
