--- a/users_fresh_project/views/users/userList.ejs
+++ b/users_fresh_project/views/users/userList.ejs
@@ -5,16 +5,75 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User list</title>
+  <style>
+    .userList {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    .userItem {
+      display: flex;
+      gap: 12px;
+    }
+
+    .userName {
+      min-width: 200px
+    }
+
+    td {
+      padding: 5px 10px;
+    }
+  </style>
+  <script>
+    async function deleteUser(id) {
+
+      try {
+        const response = await fetch(`/users/${id}`, {
+          method: 'delete',
+        })
+        if (response.ok) {
+          window.location.reload()
+        }
+      } catch (error) {
+        console.log(error.message)
+      }
+    }
+  </script>
 </head>
 
 <body>
   <%- include('../sections/header.ejs', { title: 'User List' }) %>
   <h1>Page User list</h1>
-  <% users.forEach(user => { %>
-  <div><%= user.name %></div>
-  <div><%= user.email %></div>
-  <a href="/users/register/<%=user.id  %>">edit</a>
-  <% }) %>
+  <table class="userTable">
+    <thead>
+      <tr>
+        <th>Ім'я</th>
+        <th>Email</th>
+        <th>Тип</th>
+        <th>Відділ</th>
+        <th>Дії</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% users.forEach(user => { %>
+      <tr>
+        <td><%= user.name %></td>
+        <td><%= user.email %></td>
+        <td><%= user.type ? user.type.title : '' %></td>
+        <td><%= user.department ? user.department.name : '' %></td>
+        <td>
+          <a href="/users/register/<%= user._id %>">Edit</a> |
+          <button class="btn btn-delete" onclick="deleteUser('<%= user._id %>')">
+            Delete
+          </button>
+        </td>
+      </tr>
+      <% }) %>
+    </tbody>
+  </table>
+
 
 </body>
 
